force-app/main/default/objects/Org_Defaults__c/Org_Defaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Defaults</label>
</CustomObject>