force-app/main/default/objects/Org_Defaults__c/fields/Amex_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Amex_Gateway__c</fullName>
    <label>Amex Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>