force-app/main/default/objects/Org_Defaults__c/fields/Default_Product__c.field-meta.xml
<CustomField>
    <fullName>Default_Product__c</fullName>
    <label>Default Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>