force-app/main/default/objects/Org_Defaults__c/fields/Discover_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Discover_Gateway__c</fullName>
    <inlineHelpText>The ID of the Payment Gateway that will handle Discover card types</inlineHelpText>
    <label>Discover Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>