force-app/main/default/objects/Org_Defaults__c/fields/Order_RT__c.field-meta.xml
<CustomField>
    <fullName>Order_RT__c</fullName>
    <label>Order RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>