force-app/main/default/objects/Org_Defaults__c/fields/Payment_Method_Reset_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Reset_Threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Payment Method Reset Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>