force-app/main/default/objects/Org_Defaults__c/fields/Round_Robin_Index__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Index__c</fullName>
    <description>The next index the Payment Gateway round robin process will use.</description>
    <label>Round Robin Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>