force-app/main/default/objects/Org_Defaults__c/fields/Special_Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>Special_Invoice_Message__c</fullName>
    <description>The text in this field will be added to the Payment invoices in the comments section if the &quot;Add Special Message&quot; checkbox on Product is checked.</description>
    <inlineHelpText>The text in this field will be added to the Payment invoices if the &quot;Add Special Message&quot; checkbox on Product is checked.</inlineHelpText>
    <label>Special Invoice Message</label>
    <type>TextArea</type>
</CustomField>