force-app/main/default/objects/Org_Defaults__c/fields/Subscription_RT__c.field-meta.xml
<CustomField>
    <fullName>Subscription_RT__c</fullName>
    <label>Subscription RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>